Sign Up and Login Completed

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "ProjectDatabase": "Data Source = C:\\Users\\CDL\\OneDrive\\Desktop\\Device Monitoring Solution\\Infrastructure\\ProjectDatabase.db"
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001",
+    "expires" :  5
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
